--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 body {
 background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://github.com/Bright4586/final/blob/main/op.jpg?raw=true");
-background-repeat: no-repeat;
+background-repeat: no-repeat; 
+background-position: center;
+background-attachement: fixed;
+width:
 }
