--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://github.com/Bright4586/final/blob/main/op.jpg?raw=true");
+background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
 background-repeat: no-repeat; 
 background-position: center;
 background-attachement: fixed;
